--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "devloper connect project using MERN",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "devStart": "nodemon app.js"
   },
   "keywords": [
     "javascript",
